; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_rbtree.c_rbtree_init.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_rbtree.c_rbtree_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rbtree = type { %struct.rbnode*, %struct.rbnode* }
%struct.rbnode = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rbtree_init(%struct.rbtree* %0, %struct.rbnode* %1) #0 {
  %3 = alloca %struct.rbtree*, align 8
  %4 = alloca %struct.rbnode*, align 8
  store %struct.rbtree* %0, %struct.rbtree** %3, align 8
  store %struct.rbnode* %1, %struct.rbnode** %4, align 8
  %5 = load %struct.rbnode*, %struct.rbnode** %4, align 8
  %6 = call i32 @rbtree_node_init(%struct.rbnode* %5)
  %7 = load %struct.rbnode*, %struct.rbnode** %4, align 8
  %8 = call i32 @rbtree_black(%struct.rbnode* %7)
  %9 = load %struct.rbnode*, %struct.rbnode** %4, align 8
  %10 = load %struct.rbtree*, %struct.rbtree** %3, align 8
  %11 = getelementptr inbounds %struct.rbtree, %struct.rbtree* %10, i32 0, i32 1
  store %struct.rbnode* %9, %struct.rbnode** %11, align 8
  %12 = load %struct.rbnode*, %struct.rbnode** %4, align 8
  %13 = load %struct.rbtree*, %struct.rbtree** %3, align 8
  %14 = getelementptr inbounds %struct.rbtree, %struct.rbtree* %13, i32 0, i32 0
  store %struct.rbnode* %12, %struct.rbnode** %14, align 8
  ret void
}

declare dso_local i32 @rbtree_node_init(%struct.rbnode*) #1

declare dso_local i32 @rbtree_black(%struct.rbnode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
